--- a/templates/home.html
+++ b/templates/home.html
@@ -17,26 +17,33 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Subjects</h1>
                         <div class="container">
-                            <table class="table table-hover borderless">
+                            <table class="table table-hover borderless" style="width:75%;">
                                 <tr>
-                                    <td>
+                                    <td><a href="#">
                                         <img src="{{ url_for('static', filename='img/atom18.png') }}"
                                         alt="Science">
-                                        <a href="#">Science</a>
+                                        Science</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img src="{{ url_for('static', filename='img/atom18.png') }}"
+                                        <a href="#"><img src="{{ url_for('static', filename='img/earth180.png') }}"
                                         alt="Science">
-                                        <a href="#">Science</a>
+                                        History</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}"
+                                        alt="Science">
+                                        English</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
                                         <img src="{{ url_for('static', filename='img/atom18.png') }}"
                                         alt="Science">
-                                        <a href="#"><h2>Science</h2></a>
+                                        Math</a>
                                     </td>
                                 </tr>
                             </table>
