--- a/templates/new.html
+++ b/templates/new.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
+{% extends 'base.html' %}
+
+{% block title %}New Study Guide{% endblock %}
+
+{% block style %}
 <style type="text/css">
 body
 {
@@ -54,7 +55,21 @@ body
 	transform: skew(5deg) rotate(5deg);
 }
 </style>
-</head>
+{% endblock %}
+
+{% block navbar %}
+        <li><a style="color:#ffffff;">Welcome, {{ user.name }}</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="javascript:;" id="signout">Sign Out</a></li>
+{% endblock %}
+
+{% block content %}
 <div class="box">
     <h1>TITLE</h1>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/user.js') }}"></script>
+{% endblock %}
