--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -18,7 +18,7 @@
   </table>
   <h2>Info</h2>
   <table id="info">
-    <tr><th></th><th>Title</th><th>Author</th><th>ObjectId</th></tr>
+    <tr><th></th><th>Title</th><th>Author</th><th>Body</th><th>ObjectId</th></tr>
   </table>
   
   <script type="text/javascript"
