--- a/templates/new.html
+++ b/templates/new.html
@@ -15,7 +15,8 @@ body
 .box
 {
 	position: relative;
-	width: 500px;
+	width: 100vh;
+	height: 150vh;
 	padding: 50px;
 	margin: 0 auto;
 	background-color: #fff;
