--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,41 @@
     			<span class="hamb-middle"></span>
 				<span class="hamb-bottom"></span>
             </button>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h1>Subjects</h1>
+                        <div class="container">
+                            <table class="table table-hover borderless" style="width:75%;">
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 50px;"
+                                        alt="science">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        SCIENCE</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="#" style="color:black; text-decoration:none">
+                                            <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 50px;"
+                                        alt="history">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        HISTORY</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}" style="height: 50px;"
+                                        alt="english">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        ENGLISH</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/calculator44.png') }}" style="height: 50px;"
+                                        alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        MATHEMATICS</a>
+                                    </td>
+                                </tr>
                             </table>
                         </div>
                     </div>
