updates to the new study guide page

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,14 @@
                 </div>
             </ul>
         </nav>
+        
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+                <span class="hamb-top"></span>
+    			<span class="hamb-middle"></span>
+				<span class="hamb-bottom"></span>
+            </button>
   {% endblock %}
   
   {% block content %}{% endblock %}
