--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
                             <table class="table table-hover borderless" style="width:75%;">
                                 <tr>
                                     <td><a href="#" style="color:black; text-decoration:none">
-                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 50px;"
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
                                         alt="science">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         SCIENCE</a>
                                     </td>
@@ -28,23 +28,37 @@
                                 <tr>
                                     <td>
                                         <a href="#" style="color:black; text-decoration:none">
-                                            <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 50px;"
+                                            <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 40px;"
                                         alt="history">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        HISTORY</a>
+                                        SOCIAL STUDIES</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td><a href="#" style="color:black; text-decoration:none">
-                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}" style="height: 50px;"
-                                        alt="english">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}" style="height: 40px;"
+                                        alt="english">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         ENGLISH</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td><a href="#" style="color:black; text-decoration:none">
-                                        <img src="{{ url_for('static', filename='img/calculator44.png') }}" style="height: 50px;"
+                                        <img src="{{ url_for('static', filename='img/calculator44.png') }}" style="height: 40px;"
                                         alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         MATHEMATICS</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/painter11.png') }}" style="height: 40px;"
+                                        alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        ART</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/code26.png') }}" style="height: 40px;"
+                                        alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        COMPUTER SCIENCE</a>
                                     </td>
                                 </tr>
                             </table>
