formatting table in home

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,16 +19,58 @@
                         <div class="container">
                             <table class="table table-hover borderless" style="width:75%;">
                                 <tr>
-                                    <td><a href="#" style="color:black; text-decoration:none">
+                                    <td><a href="#">
                                         <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
-                                        alt="science">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        SCIENCE</a>
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">SCIENCE</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">SOCIAL STUDIES</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">ENGLISH</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">MATHEMATICS</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">ART</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">FOREIGN LANGUAGE</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                        alt="science"></a>
+                                    <td><a href="#" style="color:black; text-decoration:none">COMPUTER SCIENCE</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <a href="#" style="color:black; text-decoration:none">
-                                            <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 40px;"
+                                            <img src="{{ url_for('static', filename='img/university7.png') }}" style="height: 40px;"
                                         alt="history">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         SOCIAL STUDIES</a>
                                     </td>
@@ -52,6 +94,13 @@
                                         <img src="{{ url_for('static', filename='img/painter11.png') }}" style="height: 40px;"
                                         alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         ART</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#" style="color:black; text-decoration:none">
+                                        <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 40px;"
+                                        alt="math">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        FOREIGN LANGUAGE</a>
                                     </td>
                                 </tr>
                                 <tr>
