--- a/templates/home.html
+++ b/templates/home.html
@@ -12,52 +12,52 @@
                         <div class="container">
                             <table class="table table-hover borderless" style="width:75%;">
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">SCIENCE</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>SCIENCE</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/university7.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/university7.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">SOCIAL STUDIES</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>SOCIAL STUDIES</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/pencil66.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">ENGLISH</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>ENGLISH</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/calculator44.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/calculator44.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">MATHEMATICS</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>MATHEMATICS</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/painter11.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/painter11.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">ART</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>ART</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/earth180.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">FOREIGN LANGUAGE</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>FOREIGN LANGUAGE</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">
-                                        <img src="{{ url_for('static', filename='img/code26.png') }}" style="height: 40px;"
+                                    <td style="text-align: right; padding-right:50px"><a href="#">
+                                        <img src="{{ url_for('static', filename='img/code26.png') }}" style="height: 60px;"
                                         alt="science"></a>
-                                    <td><a href="#" style="color:black; text-decoration:none">COMPUTER SCIENCE</a>
+                                    <td style="text-align:left"><a href="#" style="color:black; text-decoration:none"><br>COMPUTER SCIENCE</a>
                                     </td>
                                 </tr>
                             </table>
