--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <a id="logo" href="/" class="pull-left navbar-brand">
           <img src="{{ url_for('static', filename='img/quill.png') }}"
           alt="Hedgehog"
-          style="position:absolute; margin:35px 0px; top:-4vh;
+          style="position:absolute; margin:2.5% 0px; top:-4vh;
           height:5vh;">
         </a>
       </div>
