--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,7 @@
         <a id="logo" href="/" class="pull-left navbar-brand">
           <img src="{{ url_for('static', filename='img/quill.png') }}"
           alt="Hedgehog"
-          style="position:relative; margin:20px 0px; top:-4vh;
-          height:5vh;">
+          style="height:2.5vh;">
         </a>
       </div>
       <ul class="nav navbar-nav navbar-right">
