added more links to sidebar, added memeonic page

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,12 @@
                 <li>
                     <a href="/new">Create a new study guide</a>
                 </li>
+                <li>
+                    <a href="/create">Create a new info card</a>
+                </li>
+                <li>
+                    <a href="/memeonic">Meme-onic Generator</a>
+                </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
