--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,9 @@
                 <li>
                     <a href="/memeonic">Meme-onic Generator</a>
                 </li>
+                <li>
+                    <a href="/display_infos">Display Your Infos</a>
+                </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
@@ -91,9 +94,6 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
-                </li>
-                <li>
-                    <a href="#">Services</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
