--- a/templates/search.html
+++ b/templates/search.html
@@ -1,16 +1,36 @@
 {% extends 'base.html' %}
 
 
-{% block title %}Index{% endblock %}
+{% block title %}Index{% endblock%}
 
 
 {% block content %}
 
+<center>
+
+{% if page_type == "search" %}
 <h1>Search</h1>
 <form method = "POST">
-  <input type = "text" name ="searchTerm">
+  <input type="text" name="searchTerm" placeholder="The 9001th theorem of the Universe">
   <p/>
   <input type="submit" name="button" value="search">
 </form>
 
+{% else %}
+<h1>Links</h1>
+
+{% for link in links %}
+<a href="{{link}}">{{link}}</a>
+<br>
+<br>
+{% endfor %}
+
+{% if message!="" %}
+<i>{{message}}</i>
+{% endif %}
+
+</center>
+
+{% endif %}
+ 
 {% endblock %}
