still working on putting search in a box

--- a/templates/create.html
+++ b/templates/create.html
@@ -31,7 +31,9 @@
   
   <!-- Box for assisted search -->
   <div align="left">
-    <object type="text/html" data="assisted_search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"></object>
+    one
+    <object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"></object>
+    two
   </div>
 
 </center>
