edit about page

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,10 +85,10 @@
     style="height:100px;"></td>
     </tr>
       <tr>
-        <td>Leader<br>Angela Chan</td>
+        <td>UX Designer<br>Angela Chan</td>
         <td>Backend Developer<br>Leon Cheng</td>
         <td>UX Designer<br>Amanda Chiu</td>
-        <td>Middleware Developer<br>Eric Stringham</td>
+        <td>Backend Developer<br>Eric Stringham</td>
       </tr>
     </table>
   </div>
