--- a/static/style/in.css
+++ b/static/style/in.css
@@ -314,7 +314,7 @@ html { height: 100%;}
     width:300px;
     vertical-align: middle;
     text-align: center;
-    
+    padding-left:50px;
 }
 
 .navbar-fixed-top {
