finished up contact us

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,8 +95,51 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
-                <li>
-                    <a href="#">Contact</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact Us<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li class="dropdown-header">Email us if you run across any errors or need support.</li>
+                      <li style="color:white;
+                                 padding-left:2em;
+                                 padding-top:0.5em;
+                                 padding-bottom:0.5em;">
+                        UX Designer
+                        <br>
+                        Angela Chan
+                        <br>
+                        angelachan64@gmail.com
+                      </li>
+                      <li style="color:white;
+                                 padding-left:2em;
+                                 padding-top:0.5em;
+                                 padding-bottom:0.5em;">
+                        Backend Developer
+                        <br>
+                        Leon Cheng
+                        <br>
+                        57leonardo@gmail.com
+                      </li>
+                      <li style="color:white;
+                                 padding-left:2em;
+                                 padding-top:0.5em;
+                                 padding-bottom:0.5em;">
+                        UX Designer
+                        <br>
+                        Amanda Chiu
+                        <br>
+                        amanda.chiu88@gmail.com
+                      </li>
+                      <li style="color:white;
+                                 padding-left:2em;
+                                 padding-top:0.5em;
+                                 padding-bottom:0.5em;">
+                        Backend Developer
+                        <br>
+                        Eric Stringham
+                        <br>
+                        eric@stringham.name
+                      </li>
+                    </ul>
                 </li>
                 <div class="footer">
                   <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
