--- a/templates/new.html
+++ b/templates/new.html
@@ -15,7 +15,6 @@ body
 .box
 {
 	position: relative;
-
 	bottom: 2vh;
 	width: 100vh;
 	height: 150vh;
@@ -70,9 +69,11 @@ body
 {% block content %}
 <div class="container">
 	<button onclick="myFunction()">EDIT DOC</button>
+	<button onclick="stop()">SUBMIT</button>
 	<div class="box">
     	<p id="myP">TITLE</p>
 	</div>
+
 </div>
 
 {% endblock %}
@@ -81,7 +82,10 @@ body
 <script>
 function myFunction() {
     document.getElementById("myP").contentEditable = true;
-    document.getElementById("demo").innerHTML = "STUDY GUIDE IN PROGRESS...";
+    //document.getElementById("demo").innerHTML = "STUDY GUIDE IN PROGRESS...";
+}
+function stop(){
+	document.getElementById("myP").contentEditable = false;
 }
 </script>
 <script src="{{ url_for('static', filename='js/user.js') }}"></script>
