embed page in create

--- a/templates/create.html
+++ b/templates/create.html
@@ -31,13 +31,11 @@
   
   <!-- Box for assisted search -->
   <div align="left">
+      <!-- inside create.html CALLS SEARCH.HTML -->
     one
-    <object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"></object>
-    two
-  </div>
-
-</center>
-
+    <object data="/search" width="600" height="400"> <embed src="/search" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+    <!--<object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"><center>-->
+  two
 {% endblock %}
 
 
