simple search.html, embed in create.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
+<html>
+<body>
 <center>
-
 {% if page_type == "search" %}
 <h1>Search</h1>
 <form method = "POST">
@@ -24,3 +26,5 @@
 </center>
 
 {% endif %}
+
+</body>
