delete uneccessary dropdowns in left nav

--- a/templates/create.html
+++ b/templates/create.html
@@ -8,6 +8,7 @@
 
 <center>
   <div class="container">
+    <div class="infocard">
     <h1>Create an Info Card!</h1>
     <form id="create-info">
       Title
@@ -30,12 +31,11 @@
     </div>
   
   <!-- Box for assisted search -->
-  <div align="left">
-      <!-- inside create.html CALLS SEARCH.HTML -->
-    one
+  <div class="assisted-search" align="right">
     <object data="/search" width="600" height="400"> <embed src="/search" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
     <!--<object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"><center>-->
-  two
+  </div>
+</div>
 {% endblock %}
 
 
