finally made display infos kinda work, just displays very ugly right now

--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -9,12 +9,18 @@
 <center>
   <div class="container">
     <h1>Here are your cards</h1>
-    </form>
-  </div>
+</form>
+</div>
 <br>
 (<u>Developer's Note</u>: This page is currently under construction. Should be displaying the infos the user created.)
-</center>
 
+<br>
+<button name="showButton" id="showButton">Show All</button>
+
+<div align="center">
+  <object data="/api/info/display_infos/" width="600" height="400"> <embed src="/api/info/display_infos/" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+
+</center>
 {% endblock %}
 
 
