moved script container to info.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,10 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/new">Create a new study guide</a>
+                    <a href="/new">Create a New Study Guide</a>
                 </li>
                 <li>
-                    <a href="/create">Create a new info card</a>
+                    <a href="/create">Create a New Info Card</a>
                 </li>
                 <li>
                     <a href="/memeonic">Meme-onic Generator</a>
