--- a/templates/new.html
+++ b/templates/new.html
@@ -79,14 +79,6 @@ body
 {% endblock %}
 
 {% block scripts %}
-<script>
-function myFunction() {
-    document.getElementById("myP").contentEditable = true;
-    //document.getElementById("demo").innerHTML = "STUDY GUIDE IN PROGRESS...";
-}
-function stop(){
-	document.getElementById("myP").contentEditable = false;
-}
-</script>
 <script src="{{ url_for('static', filename='js/user.js') }}"></script>
+<script src="{{ url_for('static', filename='js/info.js') }}"></script>
 {% endblock %}
