trying to make create.html better

--- a/templates/create.html
+++ b/templates/create.html
@@ -9,50 +9,53 @@
 <center>
   <div class="container">
     <div class="infocard">
-    <h1>Create an Info Card!</h1>
-    <form id="create-info">
-      Title
-      <input name="title"
-	     type="text" placeholder="Exploding Kittens..." />
-      <br>
-      <br>
-
-      <!-- Body:  -->
-      <!-- <br> -->
-      <!-- <textarea name="body"  -->
-      <!-- 		rows="4" cols="50" placeholder="How many cats does it take to build a rocket?..."> -->
-      <!-- </textarea> -->
-
-      <div class="container">
-	<button onclick="myFunction()">EDIT DOC</button>
-	<button onclick="stop()">SUBMIT</button>
+      <h1>Create an Info Card!</h1>
+      <form id="create-info">
+	Title
+	<input name="title"
+	       type="text" placeholder="Exploding Kittens..." />
 	<br>
-	<div class="box" width="600" height="400" style="height: 100px;">
-    	  <p id="myP">Body <br>(Click Edit Doc. Then click here to start editing)<br><br><br><br><br><br></p>
+	<br>
+
+	<!-- Body: -->
+	<!-- <br> -->
+	<!-- <textarea name="body" -->
+	<!-- 		rows="4" cols="50" placeholder="How many cats does it take to build a rocket?..."> -->
+	<!-- </textarea> -->
+
+	<div class="container">
+	  <button onclick="myFunction()">EDIT BODY</button>
+	  <button onclick="stop()">SAVE BODY</button>
+	  <br><br>
+	  <div class="box" name="body" align="left" 
+	       style="width:500px; height: 170px; border:1px solid black;">
+    	    <p id="myP">
+	      (Insert Body Here...)
+	    </p>
+	  </div>
+	  
 	</div>
 
-      </div>
-
-      <br>
-      Tag
-      <input name="tag"
-	     type="text" placeholder="physics..." />
-      <br>
-      <input type="submit" name="submit" />
-    </form>
+	<br>
+	Tag
+	<input name="tag"
+	       type="text" placeholder="physics..." />
+	<br>
+	<input type="submit" name="submit" />
+      </form>
     </div>
-  
-  <!-- Box for assisted search -->
-  <div class="assisted-search" align="center">
-    <object data="/search" width="600" height="400"> <embed src="/search" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
-    <!--<object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"><center>-->
+    
+    <!-- Box for assisted search -->
+    <div class="assisted-search" align="center">
+      <object data="/search" width="600" height="400"> <embed src="/search" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+      <!--<object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"><center>-->
+    </div>
   </div>
-</div>
-{% endblock %}
+  {% endblock %}
 
 
-{% block scripts %}
-<script src="{{ url_for('static', filename='js/user.js') }}"></script>
+  {% block scripts %}
+  <script src="{{ url_for('static', filename='js/user.js') }}"></script>
 
-<script src="{{ url_for('static', filename='js/info.js') }}"></script>
-{% endblock %}
+  <script src="{{ url_for('static', filename='js/info.js') }}"></script>
+  {% endblock %}
