--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
 {% if page_type == "search" %}
 <h1>Search</h1>
 <form method = "POST">
-  <input type="text" name="searchTerm" placeholder="The 9001th theorem of the Universe">
+  <input type="text" name="searchTerm" placeholder="The 9001th theorem">
   <p/>
   <input type="submit" name="button" value="search">
 </form>
@@ -22,6 +22,10 @@
 {% if message!="" %}
 <i>{{message}}</i>
 {% endif %}
+
+<br>
+<br>
+<h3><a href="search.html">Search Again</a></h3>
 
 </center>
 
