starting to display infos

--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -18,7 +18,7 @@
 <button name="showButton" id="showButton">Show All</button>
 
 <div align="center">
-  <object data="/api/info/display_infos/" width="600" height="400"> <embed src="/api/info/display_infos/" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+  <object data="/displaying/" width="600" height="400"> <embed src="/displaying/" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
 
 </center>
 {% endblock %}
