moved to info.js

--- a/templates/displaying.html
+++ b/templates/displaying.html
@@ -25,6 +25,6 @@
     src="https://code.jquery.com/jquery-latest.min.js"
     charset="utf-8"></script>
   <script type="text/javascript"
-    src="{{ url_for('static', filename='js/database.js') }}"></script>
+    src="{{ url_for('static', filename='js/info.js') }}"></script>
 </body>
 </html>
