it has been done - displaying

--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -12,13 +12,10 @@
 </form>
 </div>
 <br>
-(<u>Developer's Note</u>: This page is currently under construction. Should be displaying the infos the user created.)
-
-<br>
-<button name="showButton" id="showButton">Show All</button>
 
 <div align="center">
-  <object data="/displaying/" width="600" height="400"> <embed src="/displaying/" width="600" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+  <object data="/displaying/" width="600" height="400"
+	  style="width:100%; height: 400px;"> <embed src="/displaying/"> </embed> Error: Embedded data could not be displayed. </object>
 
 </center>
 {% endblock %}
