--- a/templates/displaying.html
+++ b/templates/displaying.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Displaying Infos</title>
-  <style>
-    table, th, td {
+  <head>
+    <title>Displaying Infos</title>
+    <style>
+      table, th, td {
       border: 1px solid black;
       padding: 5px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Displaying Infos</h1>
-  <p>Welcome, {{ user.name }}.</p>
-  <h2>Tags</h2>
-  <table id="tags">
-    <tr><th></th><th>Name</th><th>ObjectId</th></tr>
-  </table>
-  <h2>Info</h2>
-  <table id="info">
-    <tr><th></th><th>Title</th><th>Author</th><th>Body</th><th>ObjectId</th></tr>
-  </table>
-  
-  <script type="text/javascript"
-    src="https://code.jquery.com/jquery-latest.min.js"
-    charset="utf-8"></script>
-  <script type="text/javascript"
-    src="{{ url_for('static', filename='js/info.js') }}"></script>
-</body>
+      }
+    </style>
+  </head>
+  <body>
+    <center>
+      <h1>Displaying Infos</h1>
+      <p>Welcome, {{ user.name }}.</p>
+      <h2>Tags</h2>
+      <table id="tags">
+	<tr><th></th><th>Name</th></tr>
+      </table>
+      <h2>Info</h2>
+      <table id="info">
+	<tr><th></th><th>Title</th><th>Body</th></tr>
+      </table>
+      
+      <script type="text/javascript"
+	      src="https://code.jquery.com/jquery-latest.min.js"
+	      charset="utf-8"></script>
+      <script type="text/javascript"
+	      src="{{ url_for('static', filename='js/info.js') }}"></script>
+    </center>
+  </body>
 </html>
