hyperlink to display cards

--- a/templates/create.html
+++ b/templates/create.html
@@ -45,6 +45,8 @@
 	<input type="submit" name="submit" />
       </form>
     </div>
+    <br>
+    <a href="/display_infos">See your created card</a>
 
     <hr>
     
