--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/hedge.js') }}"></script>
-<script src="{{ url_for('static', filename='js/user.js') }}"></script>
+<script src="{{ url_for('static', filename='js/intro.js') }}"></script>
 {% endblock %}
