--- a/templates/base.html
+++ b/templates/base.html
@@ -144,8 +144,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 		integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
 		crossorigin="anonymous"></script>
-	<script src="{{ url_for('static', filename='js/in.js') }}" /></script>
-{% block scripts %}{% endblock %}
+	<script src="{{ url_for('static', filename='js/user.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/in.js') }}"></script>
+  {% block scripts %}{% endblock %}
 </body>
 
 </html>
