--- a/templates/search.html
+++ b/templates/search.html
@@ -25,7 +25,7 @@
 
 <br>
 <br>
-<h3><a href="search.html">Search Again</a></h3>
+<h3><a href="{{ url_for('search') }}">Search Again</a></h3>
 
 </center>
 
