--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -18,13 +18,13 @@
   </table>
   <h2>Info</h2>
   <table id="info">
-    <tr><th></th><th>Title</th><th>Author</th><th>Body</th><th>ObjectId</th></tr>
+    <tr><th></th><th>Title</th><th>Body</th></tr>
   </table>
   
   <script type="text/javascript"
     src="https://code.jquery.com/jquery-latest.min.js"
     charset="utf-8"></script>
   <script type="text/javascript"
-    src="{{ url_for('static', filename='js/database.js') }}"></script>
+    src="{{ url_for('static', filename='js/info.js') }}"></script>
 </body>
 </html>
